--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
 </head>
 <body>
 <ul>
-	<li><a href="html/module-01.html">module 01</a></li>
-	<li><a href="html/module-02.html">module 02</a></li>
-	<li><a href="html/module-03.html">module 03</a></li>
-	<li><a href="html/module-04.html">module 04</a></li>
-	<li><a href="html/module-05.html">module 05</a></li>
-	<li><a href="html/module-06.html">module 06</a></li>
+	<li><a href="html/module-1-1.html">module 1-1</a></li>
+	<li><a href="html/module-1-2.html">module 1-2</a></li>
+	<li><a href="html/module-2-1.html">module 2-1</a></li>
+	<li><a href="html/module-2-2.html">module 2-2</a></li>
 </ul>
 </body>
 </html>
