--- a/html/module-7add.html
+++ b/html/module-7add.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../css/module-7.css">
+    <link rel="stylesheet" href="../css/styles-7.css">
 </head>
 <body>
 <!--<div class="movie">
