--- a/html/module-8.html
+++ b/html/module-8.html
@@ -6,10 +6,15 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>module 7</title>
-    <link rel="stylesheet" href="../css/styles-7.css">
+    <link rel="stylesheet" href="../css/styles-8.css">
 </head>
 <body>
 
-<script src="../js/script-7.js"></script>
+<div class="image-gallery js-image-gallery">
+    <div class="fullview"></div>
+    <ul class="preview"></ul>
+</div>
+
+<script src="../js/script-8.js"></script>
 </body>
 </html>
