9 fixes. {} => []. ms => Date

--- a/html/module-9.html
+++ b/html/module-9.html
@@ -18,8 +18,12 @@
     </ul>
 </div>
 
-<button id="maker" class="uniq">Set</button>
+<div id="maker" class="uniq" >
+    <input type="text" data-type="label" placeholder="Label" title="enter box id after '; '">
+    <button>Set</button>
+</div>
 
+<div id="1"></div>
 <script src="../js/script-9.js"></script>
 </body>
 </html>
