refactor file managment

--- a/module-9/module-9.html
+++ b/module-9/module-9.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/styles-9.css">
+    <link rel="stylesheet" href="styles-9.css">
 </head>
 <body>
 <!--Template node. display:none-->
@@ -18,12 +18,12 @@
     </ul>
 </div>
 
-<div id="maker" class="uniq" >
+<div id="maker" class="uniq">
     <input type="text" data-type="label" placeholder="Label" title="enter box id after '; '">
     <button>Set</button>
 </div>
 
 <div id="1"></div>
-<script src="../js/script-9.js"></script>
+<script src="script-9.js"></script>
 </body>
 </html>
