--- a/module-10/module-10/module-10.html
+++ b/module-10/module-10/module-10.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Module-10</title>
-    <link rel="stylesheet" href="../css/styles-10.css">
+    <link rel="stylesheet" href="styles-10.css">
 </head>
 
 <body>
@@ -85,6 +85,6 @@
     </div>
 </main>
 
-<script src="../js/script-10.js"></script>
+<script src="script-10.js"></script>
 </body>
 </html>
