--- a/module-2/module-2-2.html
+++ b/module-2/module-2-2.html
@@ -5,10 +5,10 @@
 	<meta name="viewport"
 	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>module 4</title>
+	<title>module 2-2</title>
 </head>
 <body>
 
-<script src="../js/script-4.js"></script>
+<script src="script-2-2.js"></script>
 </body>
 </html>
