--- a/module-7/module-7.html
+++ b/module-7/module-7.html
@@ -5,10 +5,11 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>module 5</title>
+    <title>module 7</title>
+    <link rel="stylesheet" href="styles-7.css">
 </head>
 <body>
 
-<script src="../js/script-5.js"></script>
+<script src="script-7.js"></script>
 </body>
 </html>
