--- a/module-7/module-7add.html
+++ b/module-7/module-7add.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../css/styles-7.css">
+    <link rel="stylesheet" href="styles-7.css">
 </head>
 <body>
 <!--<div class="movie">
@@ -18,7 +18,7 @@
         <p class="movie__rating">Rating: 8.6</p>
     </div>
 </div>-->
-<script src="../js/script-7add.js"></script>
+<script src="script-7add.js"></script>
 
 </body>
 </html>
