--- a/module-8/module-8.html
+++ b/module-8/module-8.html
@@ -5,10 +5,16 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>module 6</title>
+    <title>module 7</title>
+    <link rel="stylesheet" href="styles-8.css">
 </head>
 <body>
 
-<script src="../js/script-6.js"></script>
+<div class="image-gallery js-image-gallery">
+    <div class="fullview"></div>
+    <ul class="preview"></ul>
+</div>
+
+<script src="script-8.js"></script>
 </body>
 </html>
