--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
 <ul>
-	<li><a href="html/module-1-1.html">module 1-1</a></li>
-	<li><a href="html/module-1-2.html">module 1-2</a></li>
-	<li><a href="html/module-2-1.html">module 2-1</a></li>
-	<li><a href="html/module-2-2.html">module 2-2</a></li>
+	<li><a href="module-1/index-1.html">module 1-1</a></li>
+	<li><a href="module-1/index-2.html">module 1-2</a></li>
+	<li><a href="module-2/index-1.html">module 2-1</a></li>
+	<li><a href="module-2/index-2.html">module 2-2</a></li>
 </ul>
 </body>
 </html>
