--- a/module-5/index.html
+++ b/module-5/index.html
@@ -5,16 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>module 7</title>
-    <link rel="stylesheet" href="styles-8.css">
+    <title>module 5</title>
 </head>
 <body>
 
-<div class="image-gallery js-image-gallery">
-    <div class="fullview"></div>
-    <ul class="preview"></ul>
-</div>
-
-<script src="script-8.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
