--- a/module-9/index.html
+++ b/module-9/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="styles-9.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <!--Template node. display:none-->
@@ -24,6 +24,6 @@
 </div>
 
 <div id="1"></div>
-<script src="script-9.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
