--- a/module-10/module-10-1/index-1.html
+++ b/module-10/module-10-1/index-1.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Module 10-1</title>
-    <link rel="stylesheet" href="style-10-1.css">
+    <link rel="stylesheet" href="style-1.css">
 </head>
 <body>
 
@@ -59,6 +59,6 @@
     <p class="status"></p>
 </main>
 
-<script src="script-10-1.js"></script>
+<script src="script-1.js"></script>
 </body>
 </html>
