--- a/module-11/index.html
+++ b/module-11/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="style-11.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -61,6 +61,6 @@
 </template>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
-<script src="script-11.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
