--- a/module-6/index.html
+++ b/module-6/index.html
@@ -5,11 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>module 7</title>
-    <link rel="stylesheet" href="styles-7.css">
+    <title>module 6</title>
 </head>
 <body>
 
-<script src="script-7.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
