--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
 	<li><a href="module-1/index-2.html">module 1-2</a></li>
 	<li><a href="module-2/index-1.html">module 2-1</a></li>
 	<li><a href="module-2/index-2.html">module 2-2</a></li>
+	<li><a href="module-3/index.html">Module 3</a></li>
+	<li><a href="module-4/index.html">Module 4</a></li>
+	<li><a href="module-5/index.html">Module 5</a></li>
+	<li><a href="module-6/index.html">Module 6</a></li>
+	<li><a href="module-7/index.html">Module 7</a></li>
+	<li><a href="module-8/index.html">Module 8</a></li>
+	<li><a href="module-9/index.html">Module 9</a></li>
+	<li>
+		<ul>
+			<li><a href="module-10/0/index.html">Module 10 (beta)</a></li>
+			<li><a href="module-10/1/index.html">Module 10</a></li>
+		</ul>
+	<li><a href="module-11/index.html">Module 11</a></li>
 </ul>
 </body>
 </html>
