--- a/module-10/1/index.html
+++ b/module-10/1/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Module 10-1</title>
-    <link rel="stylesheet" href="style-1.css">
+    <title>Module 10</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -59,6 +59,6 @@
     <p class="status"></p>
 </main>
 
-<script src="script-1.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
