--- a/module-7/index-add.html
+++ b/module-7/index-add.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Module 7 add</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
