--- a/module-7/index.html
+++ b/module-7/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>module 7</title>
+    <title>Module 7</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
